updated to java16 and avif support