@@ -19,20 +19,26 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>16</source>
+					<target>16</target>
 					<showWarnings>false</showWarnings>
 					<debug>false</debug>
 					<optimize>true</optimize>
-					<compilerArgument>-Xlint:none</compilerArgument>
+					<!--<compilerArgument>-Xlint:none</compilerArgument>-->
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.desktop/sun.awt.windows=ALL-UNNAMED</arg>
+						<arg>-Xlint:none</arg>
+						<arg>--add-opens</arg>
+						<arg>java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.3</version>
+				<version>3.6.0</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
